<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.coronatrace.covidtracker.home.HomeViewModel" />
    </data>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottomBar"
        android:fillViewport="true"
        android:paddingBottom="56dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Status card -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                app:cardBackgroundColor="@color/lightGray"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_margin">

                    <TextView
                        android:id="@+id/statusTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_no_contact_title"
                        android:textAppearance="?attr/textAppearanceHeadline4"
                    />

                    <TextView
                        android:id="@+id/statusBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/status_no_contact_description"
                        android:textAppearance="?attr/textAppearanceBody1"
                        android:textColor="?android:attr/textColorSecondary" />


                    <Button
                        android:id="@+id/resetInfectionsButton"
                        android:layout_width="wrap_content"
                        android:layout_gravity="top"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_symptoms"
                        android:visibility="gone"
                        android:onClick="@{() -> viewmodel.resetInfectionsFromSymptoms()}"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <!-- Settings -->
                <TextView
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/enable_tracking" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_tracking_description" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <!-- Bottom bar -->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingRight="@dimen/default_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigateCheckSymptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/default_margin"
            android:text="@string/check_symptoms"
            app:icon="@drawable/ic_help_white_16dp" />

    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>